--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+conf.py
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,venv,visualstudiocode,pycharm,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,venv,visualstudiocode,pycharm,macos,windows
 
