--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 asgiref==3.8.1
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.8.30
+charset-normalizer==3.3.2
 Django==4.2
 django-seed==0.3.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 Faker==28.4.1
+idna==3.9
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
+requests==2.32.3
 six==1.16.0
+soupsieve==2.6
 sqlparse==0.5.1
 toposort==1.10
+typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.3
